--- a/src/config/themes/brookmint.toml
+++ b/src/config/themes/brookmint.toml
@@ -43,7 +43,7 @@ labelForCard = "Featured ✨"
 dark = "tabler:moon"
 light = "tabler:sun"
 youtube = "tabler:brand-youtube"
-x = "tabler:brand-twitter"
+twitter = "tabler:brand-twitter"
 instagram = "tabler:brand-instagram"
 facebook = "tabler:brand-facebook"
 github = "tabler:brand-github"
